# stock-news-automation

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/: run-checks.sh  setup.sh
.github/workflows/: daily-report.yml  verify-python.yml
config/: sources.example.yaml  sources.yaml
data/: tw_stocks_full.csv  tw_stocks_sample.csv
data/history/: 2026-07-01.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
docs/: architecture.md  project-handoff.html
src/stock_news_bot/: __init__.py  __main__.py  config.py  models.py  pipeline.py  report.py
src/stock_news_bot/analysis/: __init__.py  dictionary.py  llm.py  signals.py
src/stock_news_bot/collectors/: rss.py  youtube.py
src/stock_news_bot/storage/: history.py  local_store.py  sheets.py
src/stock_news_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_dictionary.py  test_history.py  test_signals.py
